eks/1-vpc.tf
// Creating vpc for the eks cluster
resource "aws_vpc" "eks_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "eks-vpc"
  }
}
